--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,7 @@
         <br>
         <div class="center text-big bold">
             Hi! I am your webapp sa.
+<h1>My new heading added</h1>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
